# liteArm

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
docs/: ARCHITECTURE.md
main/: CMakeLists.txt  litearm.c  litearm_config.h  litearm_secrets.h.example  litearm_text.h
main/agent/: agent_core.c  agent_core.h  command_parser.c  command_parser.h
main/bus/: message_bus.c  message_bus.h
main/channels/feishu/: feishu_bot.c  feishu_bot.h
main/heartbeat/: heartbeat.c  heartbeat.h
main/skills/: skill_registry.c  skill_registry.h  skill_types.h
main/skills/builtin/: skill_cron.c  skill_cron.h  skill_file_ops.c  skill_file_ops.h  skill_get_time.c  skill_get_time.h  skill_help.c  skill_help.h  skill_system.c  skill_system.h
main/tools/: tool_cron.c  tool_cron.h  tool_files.c  tool_get_time.c  tool_get_time.h  tool_registry.c  tool_registry.h  tool_system.c  tool_system.h
main/wifi/: wifi_config.c  wifi_config.h  wifi_manager.c  wifi_manager.h
spiffs_data/: .gitkeep
